--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -1,52 +1,61 @@
 ---
-import Button from "@components/Button.astro";
-import Title from "@components/Title.astro";
 import Card from "@components/Card.astro";
 ---
 
-<div class="flex w-full flex-col justify-center gap-4">
-    <div class="flex w-full flex-row flex-wrap justify-center gap-8 ~px-8/32">
-        <Card icon="skill-icons:astro">
-            <Title>Astro</Title>
-            <p class="text-lg opacity-90">
-                Static site generator used for this website!
-            </p>
-            <Button class="mt-2" href="https://astro.build/" target="_blank">
-                Website
-            </Button>
-        </Card>
-        <Card icon="skill-icons:svelte">
-            <Title>Svelte</Title>
-            <p class="text-lg opacity-90">Reactive web UI framework</p>
-            <Button class="mt-2" href="https://svelte.dev/" target="_blank">
-                Website
-            </Button>
-        </Card>
-        <Card icon="skill-icons:tailwindcss-dark">
-            <Title>Tailwind CSS</Title>
-            <p class="text-lg opacity-90">Utility-first CSS framework</p>
-            <Button
-                class="mt-2"
-                href="https://tailwindcss.com/"
-                target="_blank">
-                Website
-            </Button>
-        </Card>
-        <Card icon="skill-icons:arch-dark">
-            <Title>Arch Linux</Title>
-            <p class="text-lg opacity-90">A lightweight linux distro</p>
-            <Button class="mt-2" href="https://archlinux.org/" target="_blank">
-                Website
-            </Button>
-        </Card>
-        <Card icon="skill-icons:linux-dark">
-            <Title>Manjaro Linux</Title>
-            <p class="text-lg opacity-90">
-                An easy to use arch linux based distro, often my go-to
-            </p>
-            <Button class="mt-2" href="https://manjaro.org/" target="_blank">
-                Website
-            </Button>
-        </Card>
-    </div>
+<div class="flex w-full flex-row flex-wrap justify-center gap-8 ~px-8/32">
+    <Card
+        icon="skill-icons:astro"
+        title="Astro"
+        buttons={[
+            {
+                href: "https://astro.build/",
+                text: "Website",
+            },
+        ]}>
+        Static site generator used for this website!
+    </Card>
+    <Card
+        icon="skill-icons:svelte"
+        title="Svelte"
+        buttons={[
+            {
+                href: "https://svelte.dev/",
+                text: "Website",
+            },
+        ]}>
+        A JavaScript framework for building reactive user interfaces
+    </Card>
+    <Card
+        icon="skill-icons:tailwindcss-dark"
+        title="Tailwind CSS"
+        buttons={[
+            {
+                href: "https://tailwindcss.com/",
+                text: "Website",
+            },
+        ]}>
+        Utility-first CSS framework i use for pretty much everything
+    </Card>
+    <Card
+        icon="skill-icons:arch-dark"
+        title="Arch Linux"
+        buttons={[
+            {
+                href: "https://archlinux.org/",
+                text: "Website",
+            },
+        ]}>
+        A lightweight yet customizable linux distro
+    </Card>
+    <Card
+        icon="skill-icons:linux-dark"
+        title="Manjaro Linux"
+        buttons={[
+            {
+                href: "https://manjaro.org/",
+                text: "Website",
+            },
+        ]}>
+        An easy-to-use arch linux based distro, often my go-to
+    </Card>
 </div>
