--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,12 @@ import Card from "@components/Card.astro";
 import Age from "@components/Age.astro";
 ---
 
-<Layout title="ItsWhisp">
+<Layout title="home">
     <div
         class="pointer-events-none h-full w-full bg-cover *:fixed *:-z-10 *:h-full *:w-full">
         <div class="bg-hero bg-cover"></div>
         <div
-            class="bg-grid scale-110 animate-[gridScroll_1s_linear_infinite] opacity-0">
+            class="scale-110 animate-[gridScroll_1s_linear_infinite] bg-grid opacity-0">
         </div>
     </div>
     <Hero />
@@ -22,32 +22,24 @@ import Age from "@components/Age.astro";
         <div
             id="about"
             class="flex w-full scroll-mt-64 flex-row flex-wrap justify-center gap-8 ~px-8/32">
-            <Card icon="fluent:person-16-filled">
-                <Title>About me</Title>
-                <p class="flex-shrink-0 text-lg opacity-90">
-                    Hi there, I'm whisp! A <Age /> y.o. from Costa Rica who likes
-                    messing around with computers and coding, currently focusing
-                    on web dev
-                </p>
+            <Card icon="fluent:person-16-filled" title="About me">
+                Hi there, I'm whisp! A <Age /> y.o. from Costa Rica who likes messing
+                around with computers and coding, currently focusing on web dev
             </Card>
-            <Card icon="fluent:design-ideas-16-filled">
-                <Title>Interests</Title>
-                <p class="flex-shrink-0 text-lg opacity-90">
-                    Some of the stuff I'm into is tech in general, coding and
-                    UI/UX design, I also play games sometimes and enjoy
-                    listening to music
-                </p>
+            <Card icon="fluent:design-ideas-16-filled" title="Interests">
+                Some of the stuff I'm into is tech in general, coding and UI/UX
+                design, I also play games sometimes and enjoy listening to music
             </Card>
         </div>
         <div class="text-center">
-            <Title class:list={"text-3xl"}>Technologies</Title>
+            <Title class:list={"text-3xl"} cursor={true}>Technologies</Title>
             <p class="mt-2 text-balance text-lg opacity-90">
                 Some technologies and tools i have used as a developer
             </p>
         </div>
         <Technologies />
         <div class="text-center">
-            <Title class:list={"text-3xl"}>Socials & links</Title>
+            <Title class:list={"text-3xl"} cursor={true}>Socials & links</Title>
             <p
                 id="socials"
                 class="mt-2 scroll-mt-32 text-balance text-lg opacity-90">
